[#5] [#6] Add triggers for moving through templates and for turn start/end in template

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,12 +1,28 @@
 {
-  "TEMPLATEMACRO.whenCreated": "When Created",
-  "TEMPLATEMACRO.whenDeleted": "When Deleted",
-  "TEMPLATEMACRO.whenMoved": "When Moved",
-  "TEMPLATEMACRO.whenHidden": "When Hidden",
-  "TEMPLATEMACRO.whenRevealed": "When Revealed",
-  "TEMPLATEMACRO.whenEntered": "When Entered",
-  "TEMPLATEMACRO.whenLeft": "When Left",
-  "TEMPLATEMACRO.whenStaying": "When Staying",
+  "TEMPLATEMACRO.AS_GM": "Execute as GM:",
+  "TEMPLATEMACRO.AsGMTooltip": "Execute the macro by the first found GM client, rather than the client that initiated the trigger. Useful in case a script needs specific permissions that are not normally available to a player client.",
   "TEMPLATEMACRO.never": "Never Automatically",
-  "TEMPLATEMACRO.AS_GM": "Execute as GM:"
+  "TEMPLATEMACRO.neverDesc": "Never called on its own, only when called through other functions",
+  "TEMPLATEMACRO.whenCreated": "When Created",
+  "TEMPLATEMACRO.whenCreatedDesc": "When the template is created or copied",
+  "TEMPLATEMACRO.whenDeleted": "When Deleted",
+  "TEMPLATEMACRO.whenDeletedDesc": "When the template is deleted",
+  "TEMPLATEMACRO.whenEntered": "When Entered",
+  "TEMPLATEMACRO.whenEnteredDesc": "When a token enters the template",
+  "TEMPLATEMACRO.whenHidden": "When Hidden",
+  "TEMPLATEMACRO.whenHiddenDesc": "When the template is hidden from player view",
+  "TEMPLATEMACRO.whenLeft": "When Left",
+  "TEMPLATEMACRO.whenLeftDesc": "When a token leaves the template",
+  "TEMPLATEMACRO.whenMoved": "When Moved",
+  "TEMPLATEMACRO.whenMovedDesc": "When the template is moved to a new position",
+  "TEMPLATEMACRO.whenRevealed": "When Revealed",
+  "TEMPLATEMACRO.whenRevealedDesc": "When the template is no longer hidden from player view",
+  "TEMPLATEMACRO.whenStaying": "When Staying",
+  "TEMPLATEMACRO.whenStayingDesc": "When a token moves within the template",
+  "TEMPLATEMACRO.whenThrough": "When Through",
+  "TEMPLATEMACRO.whenThroughDesc": "When moved from outside a template and through it to the other side",
+  "TEMPLATEMACRO.whenTurnEnd": "Turn End",
+  "TEMPLATEMACRO.whenTurnEndDesc": "When a token ends its combat turn within the template",
+  "TEMPLATEMACRO.whenTurnStart": "Turn Start",
+  "TEMPLATEMACRO.whenTurnStartDesc": "When a token starts its combat turn within the template"
 }
